--- a/personality.html
+++ b/personality.html
@@ -87,7 +87,7 @@ window.addEventListener("load", function(){
 	</footer>
 		<nav class="navsome">
 			<a class="some" href="https://www.facebook.com" target="_blank"><img src="facebooklogo.png" style="width:42px; height:42px;" alt="Facebook" ></a>
-			<a class="some" href="https://www.instagram.com" target="_blank"><img src="instagramlogo.png" style="width:42px; height:42px;" alt="Instagram"></a>
+			<a class="some" href="https://www.instagram.com" target="_blank"><img src="iglogo.png" style="width:42px; height:42px;" alt="Instagram"></a>
 			<a class="some" href="mailto:yllappahoc-5573@yopmail.com"><img src="emaillogo.png" style="width:42px; height:42px;" alt="Email"></a>
 		</nav>
 
