--- a/personality.html
+++ b/personality.html
@@ -45,6 +45,15 @@ window.addEventListener("load", function(){
 		<div class="logo">
 			<img src="mylogo.png" alt="Logo" title="10 out of 10 logo" style="width:82px; height:82px;">
 		</div>
+		
+		
+		<div class="test">
+			<a class="phone" href="index.html">Home</a>
+			<a class="phone" href="resume.html">Portfolio</a>
+			<a class="third phone" href="personality.html">About</a>
+			<a class="phone" href="history.html">His story</a>
+		</div>
+		
 		<h1 class="resume animated fadeInUp">About</h1>
 	</header>
 	<main>
@@ -89,12 +98,13 @@ window.addEventListener("load", function(){
 		<div class="footer">
 			<p>Portfolio Jaakko R</p>
 		</div>
-	</footer>
+		</footer>
 		<nav class="navsome">
 			<a class="some" href="https://www.facebook.com" target="_blank"><img src="facebooklogo.png" style="width:42px; height:42px;" alt="Facebook" ></a>
 			<a class="some" href="https://www.instagram.com" target="_blank"><img src="iglogo.png" style="width:42px; height:42px;" alt="Instagram"></a>
 			<a class="some" href="mailto:yllappahoc-5573@yopmail.com"><img src="emaillogo.png" style="width:42px; height:42px;" alt="Email"></a>
 		</nav>
+	
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
