--- a/personality.html
+++ b/personality.html
@@ -95,7 +95,7 @@ window.addEventListener("load", function(){
 		</div>	
 	</main>
 	    <footer class="footerresume">
-		<div class="footer">
+		<div class="footerr">
 			<p>Portfolio Jaakko R</p>
 		</div>
 		</footer>
@@ -105,16 +105,16 @@ window.addEventListener("load", function(){
 			<a class="some" href="mailto:yllappahoc-5573@yopmail.com"><img src="emaillogo.png" style="width:42px; height:42px;" alt="Email"></a>
 		</nav>
 		
-    <footer class="footerresume">
+    <div class="footerphone">
 		<div class="footer">
 			<p>Portfolio Jaakko R</p>
 		</div>
-		</footer>
-		<nav class="navsome">
-			<a class="some" href="https://www.facebook.com" target="_blank"><img src="facebooklogo.png" style="width:42px; height:42px;" alt="Facebook" ></a>
-			<a class="some" href="https://www.instagram.com" target="_blank"><img src="iglogo.png" style="width:42px; height:42px;" alt="Instagram"></a>
-			<a class="some" href="mailto:yllappahoc-5573@yopmail.com"><img src="emaillogo.png" style="width:42px; height:42px;" alt="Email"></a>
-		</nav>
+		</div>
+		<div class="navsomee">
+			<a class="somee" href="https://www.facebook.com" target="_blank"><img src="facebooklogo.png" style="width:42px; height:42px;" alt="Facebook" ></a>
+			<a class="somee" href="https://www.instagram.com" target="_blank"><img src="iglogo.png" style="width:42px; height:42px;" alt="Instagram"></a>
+			<a class="somee" href="mailto:yllappahoc-5573@yopmail.com"><img src="emaillogo.png" style="width:42px; height:42px;" alt="Email"></a>
+		</div>
 	
 
     <!-- Optional JavaScript -->
