--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 	<link rel="stylesheet" href="animateindex.css">
 	
 	<style>
+@media only screen and (min-width: 780px) {
 body {
 	background-image: url("bg.jpg");
+	
 }
 div#load_screen{
 	background: #000;
@@ -47,6 +49,12 @@ window.addEventListener("load", function(){
 		<div class="logo">
 			<img src="mylogo.png" alt="Logo" title="10 out of 10 logo" style="width:82px; height:82px;">
 		</div>
+		<div class="test">
+			<a class="first phone" href="index.html">Home</a>
+			<a class="phone" href="resume.html">Portfolio</a>
+			<a class="phone" href="personality.html">About</a>
+			<a class="phone" href="history.html">His story</a>
+		</div>
 	</header>
 	<main>
 		<div class="container animated fadeIn">
@@ -61,12 +69,11 @@ window.addEventListener("load", function(){
 				</div>
 				<div class="col-sm-5 animated fadeIn">
 					<h1>about me</h1>
-					<p>I’m a student at Laurea university of applied sciences trying to grasp the title: Bachelor of Science in Information Technology.
+					<p class="about">I’m a student at Laurea university of applied sciences trying to grasp the title: Bachelor of Science in Information Technology.
 					I enjoy losing myself into extensive projects and basking in the glory of the finished task. 
 					Outside studying my hobbies include gaming, laying around at home and skiing whenever the weather allows it. </p>
 				</div>
 				<div class="col-sm-4 animated fadeIn">
-
 				</div>
 			</div>
 		</div>
@@ -81,7 +88,16 @@ window.addEventListener("load", function(){
 			<a class="some" href="https://www.instagram.com" target="_blank"><img src="iglogo.png" style="width:42px; height:42px;" alt="Instagram"></a>
 			<a class="some" href="mailto:yllappahoc-5573@yopmail.com"><img src="emaillogo.png" style="width:42px; height:42px;" alt="Email"></a>
 		</nav>
-
+	<div class="footerphone  animated fadeIn">
+		<div class="footer">
+			<p>Portfolio Jaakko R</p>
+		</div>
+		</div>
+		<div class="navsomee animated fadeIn">
+			<a class="somee" href="https://www.facebook.com" target="_blank"><img src="facebooklogo.png" style="width:42px; height:42px;" alt="Facebook" ></a>
+			<a class="somee" href="https://www.instagram.com" target="_blank"><img src="iglogo.png" style="width:42px; height:42px;" alt="Instagram"></a>
+			<a class="somee" href="mailto:yllappahoc-5573@yopmail.com"><img src="emaillogo.png" style="width:42px; height:42px;" alt="Email"></a>
+		</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
