--- a/history.html
+++ b/history.html
@@ -11,8 +11,15 @@
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="animate.css">
 	<style>
+@media only screen and (min-width: 780px) {
 body {
-	background-image: url("brg.jpg");
+	background-image: url("images/brg.jpg");
+	}
+}
+@media only screen and (max-width: 780px) {
+body {
+	background-image: url("images/bgphonee.jpg");
+	}
 }
 div#load_screen{
 	background: #000;
@@ -31,19 +38,58 @@ div#load_screen > div#loading{
 }
 	</style>
 	
-	<script>
+	<script type="text/javascript">
 window.addEventListener("load", function(){
 	var load_screen = document.getElementById("load_screen");
 	document.body.removeChild(load_screen);
 });
+
+var prevScrollpos = window.pageYOffset;
+window.onscroll = function() {
+var currentScrollPos = window.pageYOffset;
+  if (prevScrollpos > currentScrollPos) {
+    document.getElementById("navbar").style.top = "0";
+  } else {
+    document.getElementById("navbar").style.top = "-50px";
+  }
+  prevScrollpos = currentScrollPos;
+}
+
+function myFunction() {
+
+            var btn = document.getElementById("myButton");
+            //to make it fancier
+            if (btn.value == "Click To Close") {
+                btn.value = "Click To Open";
+                btn.innerHTML = "Click To Open";
+            }
+            else {
+                btn.value = "Click To Close";
+                btn.innerHTML = "Click To Close";
+            }
+            //this is what you're looking for
+            var x = document.getElementById("myDIV");
+            if (x.style.display === "none") {
+                x.style.display = "block";
+            } else {
+                x.style.display = "none";
+            }
+        }
+
 	</script>
-	<link rel="shortcut icon" type="image/x-icon" href="mylogo.ico" />
+	<link rel="shortcut icon" type="image/x-icon" href="logos/mylogo.ico" />
 </head>
   <body>
     <div id="load_screen"><div id="loading">Loading Portfolio<div class="lds-dual-ring"></div></div></div>
 	<header>
 		<div class="logo">
-			<img src="mylogo.png" alt="Logo" title="10 out of 10 logo" style="width:82px; height:82px;">
+			<img src="logos/mylogo.png" alt="Logo" title="10 out of 10 logo" style="width:82px; height:82px;">
+		</div>
+		<div class="test" id="navbar">
+			<a class="phone" href="index.html">Home</a>
+			<a class="phone" href="resume.html">Portfolio</a>
+			<a class="phone" href="personality.html">About</a>
+			<a class="fourth phone" href="history.html">His story</a>
 		</div>
 		<h1 class="resume animated fadeInUp">His story</h1>
 	</header>
@@ -56,11 +102,12 @@ window.addEventListener("load", function(){
 						<li><a href="resume.html">Portfolio</a></li>
 						<li><a href="personality.html">About</a></li>
 						<li><a class="fourth" href="history.html">His story</a></li>
+						<button class="animated fadeInUp" onclick="myFunction()" id="myButton" value="Click To Open Instructions">Click for gymnastics</button>
 					</ul>
 				</div>
 				<div class="col-sm-4 animated fadeInUp">
 					<h2>Early</h2>
-					<p>Age 22, always lived in Espoo, living with family of three, athletic history which includes track and field and later gymnastics, both for several years and medals. 
+					<p class="early">Age 22, always lived in Espoo, living with family of three, athletic history which includes track and field and later gymnastics, both for several years and medals. 
 					For school I went to the local elementary and from there graduated to Olari’s secondary school. Other mentionable things include travelling a lot with my family
 					across Europe, having visited half of the countries and that I’ve considered my childhood to be a good experience with it’s ups and downs.</p>
 				</div>
@@ -73,6 +120,12 @@ window.addEventListener("load", function(){
 				</div>
 			</div>
 		</div>
+
+		<video style="display:none" class="animated fadeIn" id="myDIV" width="37%" height="50%" controls>
+			<source src="images/my.mp4" type="video/mp4">
+			Your browser does not support HTML5 video.
+		</video>
+		
 	</main>
     <footer class="footerresume">
 		<div class="footer">
@@ -80,10 +133,20 @@ window.addEventListener("load", function(){
 		</div>
 	</footer>
 		<nav class="navsome">
-			<a class="some" href="https://www.facebook.com" target="_blank"><img src="facebooklogo.png" style="width:42px; height:42px;" alt="Facebook" ></a>
-			<a class="some" href="https://www.instagram.com" target="_blank"><img src="iglogo.png" style="width:42px; height:42px;" alt="Instagram"></a>
-			<a class="some" href="mailto:yllappahoc-5573@yopmail.com"><img src="emaillogo.png" style="width:42px; height:42px;" alt="Email"></a>
+			<a class="some" href="https://www.facebook.com" target="_blank"><img src="logos/facebooklogo.png" style="width:42px; height:42px;" alt="Facebook" ></a>
+			<a class="some" href="https://www.instagram.com" target="_blank"><img src="logos/iglogo.png" style="width:42px; height:42px;" alt="Instagram"></a>
+			<a class="some" href="mailto:yllappahoc-5573@yopmail.com"><img src="logos/emaillogo.png" style="width:42px; height:42px;" alt="Email"></a>
 		</nav>
+		    <div class="footerphone">
+		<div class="footer">
+			<p>Portfolio Jaakko R</p>
+		</div>
+		</div>
+		<div class="navsomee">
+			<a class="somee" href="https://www.facebook.com" target="_blank"><img src="logos/facebooklogo.png" style="width:42px; height:42px;" alt="Facebook" ></a>
+			<a class="somee" href="https://www.instagram.com" target="_blank"><img src="logos/iglogo.png" style="width:42px; height:42px;" alt="Instagram"></a>
+			<a class="somee" href="mailto:yllappahoc-5573@yopmail.com"><img src="logos/emaillogo.png" style="width:42px; height:42px;" alt="Email"></a>
+		</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
