--- a/resume.html
+++ b/resume.html
@@ -13,12 +13,12 @@
 	<style>
 @media only screen and (min-width: 780px) {
 body {
-	background-image: url("images/brg.jpg");
+	background-image: url("brg.jpg");
 	}
 }
 @media only screen and (max-width: 780px) {
 body {
-	background-image: url("images/bgphonee.jpg");
+	background-image: url("bgphonee.jpg");
 	}
 }
 div#load_screen{
@@ -55,13 +55,13 @@ var currentScrollPos = window.pageYOffset;
 }
 });
 </script>
-	<link rel="shortcut icon" type="image/x-icon" href="logos/mylogo.ico" />
+	<link rel="shortcut icon" type="image/x-icon" href="mylogo.ico" />
 </head>
   <body>
   <div id="load_screen"><div id="loading">Loading Portfolio<div class="lds-dual-ring"></div></div></div>
 	<header>
 		<div class="logo">
-			<img src="logos/mylogo.png" alt="Logo" title="10 out of 10 logo" style="width:82px; height:82px;">
+			<img src="mylogo.png" alt="Logo" title="10 out of 10 logo" style="width:82px; height:82px;">
 		</div>
 		<div class="test" id="navbar">
 			<a class="phone" href="index.html">Home</a>
@@ -124,9 +124,9 @@ var currentScrollPos = window.pageYOffset;
 		</div>
 		</footer>
 		<nav class="navsome">
-			<a class="some" href="https://www.facebook.com" target="_blank"><img src="logos/facebooklogo.png" style="width:42px; height:42px;" alt="Facebook" ></a>
-			<a class="some" href="https://www.instagram.com" target="_blank"><img src="logos/iglogo.png" style="width:42px; height:42px;" alt="Instagram"></a>
-			<a class="some" href="mailto:yllappahoc-5573@yopmail.com"><img src="logos/emaillogo.png" style="width:42px; height:42px;" alt="Email"></a>
+			<a class="some" href="https://www.facebook.com" target="_blank"><img src="facebooklogo.png" style="width:42px; height:42px;" alt="Facebook" ></a>
+			<a class="some" href="https://www.instagram.com" target="_blank"><img src="iglogo.png" style="width:42px; height:42px;" alt="Instagram"></a>
+			<a class="some" href="mailto:yllappahoc-5573@yopmail.com"><img src="emaillogo.png" style="width:42px; height:42px;" alt="Email"></a>
 		</nav>
     <div class="footerphone">
 		<div class="footer">
@@ -134,9 +134,9 @@ var currentScrollPos = window.pageYOffset;
 		</div>
 		</div>
 		<div class="navsomee">
-			<a class="somee" href="https://www.facebook.com" target="_blank"><img src="logos/facebooklogo.png" style="width:42px; height:42px;" alt="Facebook" ></a>
-			<a class="somee" href="https://www.instagram.com" target="_blank"><img src="logos/iglogo.png" style="width:42px; height:42px;" alt="Instagram"></a>
-			<a class="somee" href="mailto:yllappahoc-5573@yopmail.com"><img src="logos/emaillogo.png" style="width:42px; height:42px;" alt="Email"></a>
+			<a class="somee" href="https://www.facebook.com" target="_blank"><img src="facebooklogo.png" style="width:42px; height:42px;" alt="Facebook" ></a>
+			<a class="somee" href="https://www.instagram.com" target="_blank"><img src="iglogo.png" style="width:42px; height:42px;" alt="Instagram"></a>
+			<a class="somee" href="mailto:yllappahoc-5573@yopmail.com"><img src="emaillogo.png" style="width:42px; height:42px;" alt="Email"></a>
 		</div>
 
     <!-- Optional JavaScript -->
