--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 	<style>
 @media only screen and (min-width: 780px) {
 body {
-	background-image: url("images/bg.jpg");
+	background-image: url("bg.jpg");
 	}
 }
 @media only screen and (max-width: 780px) {
 body {
-	background-image: url("images/bgphone.jpg");
+	background-image: url("bgphone.jpg");
 	}
 }
 div#load_screen{
@@ -58,13 +58,13 @@ var currentScrollPos = window.pageYOffset;
 
 </script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<link rel="shortcut icon" type="image/x-icon" href="logos/mylogo.ico" />
+	<link rel="shortcut icon" type="image/x-icon" href="mylogo.ico" />
 </head>
   <body>
   <div id="load_screen"><div id="loading">Loading Portfolio<div class="lds-dual-ring"></div></div></div>
 	<header class="animated fadeIn">
 		<div class="logo">
-			<img src="logos/mylogo.png" alt="Logo" title="10 out of 10 logo" style="width:82px; height:82px;">
+			<img src="mylogo.png" alt="Logo" title="10 out of 10 logo" style="width:82px; height:82px;">
 		</div>
 		<div class="test" id="navbar">
 			<a class="first phone" href="index.html">Home</a>
@@ -111,9 +111,9 @@ var currentScrollPos = window.pageYOffset;
 		</div>
 	</div>
 		<div class="navsomee animated fadeIn">
-			<a class="somee" href="https://www.facebook.com" target="_blank"><img src="logos/facebooklogo.png" style="width:42px; height:42px;" alt="Facebook" ></a>
-			<a class="somee" href="https://www.instagram.com" target="_blank"><img src="logos/iglogo.png" style="width:42px; height:42px;" alt="Instagram"></a>
-			<a class="somee" href="mailto:yllappahoc-5573@yopmail.com"><img src="logos/emaillogo.png" style="width:42px; height:42px;" alt="Email"></a>
+			<a class="somee" href="https://www.facebook.com" target="_blank"><img src="facebooklogo.png" style="width:42px; height:42px;" alt="Facebook" ></a>
+			<a class="somee" href="https://www.instagram.com" target="_blank"><img src="iglogo.png" style="width:42px; height:42px;" alt="Instagram"></a>
+			<a class="somee" href="mailto:yllappahoc-5573@yopmail.com"><img src="emaillogo.png" style="width:42px; height:42px;" alt="Email"></a>
 		</div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
