--- a/history.html
+++ b/history.html
@@ -113,7 +113,7 @@ function myFunction() {
 				</div>
 				<div class="col-sm-5 animated fadeInUp">
 					<h2>Later to now</h2>
-					<p>From Olari’s secondary school I managed to get high grades which enabled me to contintue in the same building: Olari’s upper secondary school.
+					<p class="later">From Olari’s secondary school I managed to get high grades which enabled me to contintue in the same building: Olari’s upper secondary school.
 					At this point point I picked up skiing to replace my other sports. After graduating I spent two years searching my road during which I tried many different paths. 
 					In the winter 2018 I decided to apply to Laurea university of applied sciences, line being Bachelor of Science in Information Technology. 
 					A few weeks later I received information that I’ve been accepted. Currently I am studying there, happy with my choice.</p>
