--- a/resume.html
+++ b/resume.html
@@ -61,7 +61,8 @@ var currentScrollPos = window.pageYOffset;
   <div id="load_screen"><div id="loading">Loading Portfolio<div class="lds-dual-ring"></div></div></div>
 	<header>
 		<div class="logo">
-			<img src="mylogo.png" alt="Logo" title="10 out of 10 logo" style="width:82px; height:82px;">
+			<img src="logojr.png" alt="Logo" title="10 out of 10 logo" style="width:200px;">
+			 <p class="logotext">ICT Student @Laurea</p>
 		</div>
 		<div class="test" id="navbar">
 			<a class="phone" href="index.html">Home</a>
@@ -104,6 +105,7 @@ var currentScrollPos = window.pageYOffset;
 						<li>Certified in first aid</li>
 						<li>Hygiene passport</li>
 						<li>Language skills include rudiments in french and swedish</li>
+						<li class="txthid"><span class="hiddentxt">Bonus</span><span class="hiddenimg"><img src="wow1.png" width="300" /></span></li>
 					</ul>
 				</div>
 					<div class="col-sm-5">
