--- a/personality.html
+++ b/personality.html
@@ -125,7 +125,8 @@ window.onload=changeImg;
     <div id="load_screen"><div id="loading">Loading Portfolio<div class="lds-dual-ring"></div></div></div>
 	<header>
 		<div class="logo">
-			<img src="mylogo.png" alt="Logo" title="10 out of 10 logo" style="width:82px; height:82px;">
+			<img src="logojr.png" alt="Logo" title="10 out of 10 logo" style="width:200px;">
+			 <p class="logotext">ICT Student @Laurea</p>
 		</div>
 		
 		
@@ -158,7 +159,7 @@ window.onload=changeImg;
 					As for social skills I’m friendly and an excellent listener, but a stereotypical finnish person when it comes to opening my mouth. 
 					And the more unflattering things include sometimes taking the easy way out, not saying what should be said and all-round lone wolf demeanour which sometimes
 					comes off as cold.</p>
-					</div>
+				</div>
 			</div>
 		</div>
 		<div class="container animated fadeInUp">
