--- a/history.html
+++ b/history.html
@@ -83,7 +83,8 @@ function myFunction() {
     <div id="load_screen"><div id="loading">Loading Portfolio<div class="lds-dual-ring"></div></div></div>
 	<header>
 		<div class="logo">
-			<img src="mylogo.png" alt="Logo" title="10 out of 10 logo" style="width:82px; height:82px;">
+			<img src="logojr.png" alt="Logo" title="10 out of 10 logo" style="width:200px;">
+			 <p class="logotext">ICT Student @Laurea</p>
 		</div>
 		<div class="test" id="navbar">
 			<a class="phone" href="index.html">Home</a>
