--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@ var currentScrollPos = window.pageYOffset;
   <div id="load_screen"><div id="loading">Loading Portfolio<div class="lds-dual-ring"></div></div></div>
 	<header class="animated fadeIn">
 		<div class="logo">
-			<img src="mylogo.png" alt="Logo" title="10 out of 10 logo" style="width:82px; height:82px;">
+			<img src="logojr.png" alt="Logo" title="10 out of 10 logo" style="width:200px;">
+			 <p class="logotext">ICT Student @Laurea</p>
 		</div>
 		<div class="test" id="navbar">
 			<a class="first phone" href="index.html">Home</a>
@@ -101,9 +102,9 @@ var currentScrollPos = window.pageYOffset;
 		</div>
 	</footer>
 	<nav class="navsome animated fadeIn">
-			<a class="some" href="https://www.facebook.com" target="_blank"><img src="logos/facebooklogo.png" style="width:42px; height:42px;" alt="Facebook" ></a>
-			<a class="some" href="https://www.instagram.com" target="_blank"><img src="logos/iglogo.png" style="width:42px; height:42px;" alt="Instagram"></a>
-			<a class="some" href="mailto:yllappahoc-5573@yopmail.com"><img src="logos/emaillogo.png" style="width:42px; height:42px;" alt="Email"></a>
+			<a class="some" href="https://www.facebook.com" target="_blank"><img src="facebooklogo.png" style="width:42px; height:42px;" alt="Facebook" ></a>
+			<a class="some" href="https://www.instagram.com" target="_blank"><img src="iglogo.png" style="width:42px; height:42px;" alt="Instagram"></a>
+			<a class="some" href="mailto:yllappahoc-5573@yopmail.com"><img src="emaillogo.png" style="width:42px; height:42px;" alt="Email"></a>
 	</nav>
 	<div class="footerphone  animated fadeIn">
 		<div class="footer">
