--- a/personality.html
+++ b/personality.html
@@ -55,7 +55,6 @@ var currentScrollPos = window.pageYOffset;
   prevScrollpos = currentScrollPos;
 }
 
-
 function myFunction() {
   var x = document.getElementById("myDIVV");
   if (x.style.display === "none") {
@@ -173,6 +172,7 @@ window.onload=changeImg;
 						<li>Teamwork skills</li>
 						<li>More realistic risk analysis (a falling meteor isn’t something that I need to account for)</li>
 						<li>Courage to go forth</li>
+						<button class="mgallery animated fadeInUp" onclick="myFunction()" id="myButton" value="Click To Open Instructions">Gallery</button>
 					</ul>
 				</div>
 			</div>
@@ -206,6 +206,7 @@ window.onload=changeImg;
 			<a class="some" href="https://www.instagram.com" target="_blank"><img src="iglogo.png" style="width:42px; height:42px;" alt="Instagram"></a>
 			<a class="some" href="mailto:yllappahoc-5573@yopmail.com"><img src="emaillogo.png" style="width:42px; height:42px;" alt="Email"></a>
 		</nav>
+	<div class="test" id="navbarr">
     <div class="footerphone">
 		<div class="footer">
 			<p>Portfolio Jaakko R</p>
@@ -216,7 +217,7 @@ window.onload=changeImg;
 			<a class="somee" href="https://www.instagram.com" target="_blank"><img src="iglogo.png" style="width:42px; height:42px;" alt="Instagram"></a>
 			<a class="somee" href="mailto:yllappahoc-5573@yopmail.com"><img src="emaillogo.png" style="width:42px; height:42px;" alt="Email"></a>
 		</div>	
-
+	</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
