--- a/history.html
+++ b/history.html
@@ -117,16 +117,15 @@ function myFunction() {
 					<p class="later">From Olari’s secondary school I managed to get high grades which enabled me to contintue in the same building: Olari’s upper secondary school.
 					At this point point I picked up skiing to replace my other sports. After graduating I spent two years searching my road during which I tried many different paths. 
 					In the winter 2018 I decided to apply to Laurea university of applied sciences, line being Bachelor of Science in Information Technology. 
-					A few weeks later I received information that I’ve been accepted. Currently I am studying there, happy with my choice.</p>
+					A few weeks later I received information that I’ve been accepted. Currently I am studying there, happy with my choice.
+					<br><button class="mgallery animated fadeInUp" onclick="myFunction()" id="myButton" value="Click To Open Instructions">Click for gymnastics</button></p>
 				</div>
 			</div>
 		</div>
-
 		<video style="display:none" class="animated fadeIn" id="myDIV" width="37%" height="50%" controls>
 			<source src="my.mp4" type="video/mp4">
 			Your browser does not support HTML5 video.
 		</video>
-		
 	</main>
     <footer class="footerresume">
 		<div class="footer">
