--- a/history.html
+++ b/history.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="animate.css">
-	<style>
+		<style>
 @media only screen and (min-width: 780px) {
 body {
 	background-image: url("brg.jpg");
@@ -36,9 +36,9 @@ div#load_screen > div#loading{
 	height:24px;
 	margin: 300px auto;
 }
-	</style>
+</style>
 	
-	<script type="text/javascript">
+	<script>
 window.addEventListener("load", function(){
 	var load_screen = document.getElementById("load_screen");
 	document.body.removeChild(load_screen);
@@ -56,6 +56,15 @@ var currentScrollPos = window.pageYOffset;
 }
 
 function myFunction() {
+  var x = document.getElementById("myDIVV");
+  if (x.style.display === "none") {
+    x.style.display = "block";
+  } else {
+    x.style.display = "none";
+  }
+}
+
+function myFunction() {
 
             var btn = document.getElementById("myButton");
             //to make it fancier
@@ -68,13 +77,13 @@ function myFunction() {
                 btn.innerHTML = "Click To Close";
             }
             //this is what you're looking for
-            var x = document.getElementById("myDIV");
+            var x = document.getElementById("myDIVV");
             if (x.style.display === "none") {
                 x.style.display = "block";
             } else {
                 x.style.display = "none";
             }
-        }	
+        }
 function myFunctionm() {
 
             var btn = document.getElementById("myButtonm");
@@ -95,7 +104,41 @@ function myFunctionm() {
                 x.style.display = "none";
             }
         }
-	</script>
+		
+		
+var i = 0; 			// Start Point
+var images = [];	// Images Array
+var time = 4000;	// Time Between Switch
+	 
+// Image List
+images[0] = "img1.jpg";
+images[1] = "img2.jpg";
+images[2] = "img3.jpg";
+images[3] = "img4.jpg";
+images[4] = "img5.jpg";
+images[5] = "img6.jpg";
+
+// Change Image
+function changeImg(){
+	document.slide.src = images[i];
+
+	// Check If Index Is Under Max
+	if(i < images.length - 1){
+	  // Add 1 to Index
+	  i++; 
+	} else { 
+		// Reset Back To O
+		i = 0;
+	}
+
+	// Run function every x seconds
+	setTimeout("changeImg()", time);
+}
+
+// Run function when page loads
+window.onload=changeImg;
+
+</script>
 	<link rel="shortcut icon" type="image/x-icon" href="mylogo.ico" />
 </head>
   <body>
@@ -105,13 +148,24 @@ function myFunctionm() {
 			<img src="logojr.png" alt="Logo" title="10 out of 10 logo" style="width:200px;">
 			 <p class="logotext">ICT Student @Laurea</p>
 		</div>
+		
+		
 		<div class="test" id="navbar">
 			<a class="phone" href="index.html">Home</a>
 			<a class="phone" href="resume.html">Portfolio</a>
-			<a class="phone" href="personality.html">About</a>
-			<a class="fourth phone" href="history.html">His story</a>
+			<a class="third phone" href="personality.html">About</a>
+			<a class="phone" href="history.html">His story</a>
+			<div class="dropdown">
+				<div class="phone dropbtn">Contact</div>
+				<div class="dropdown-content">
+					<a class="somee" href="https://www.facebook.com" target="_blank"><img src="facebooklogo.png" style="width:33px; height:33px;" alt="Facebook" ></a>
+					<a class="somee" href="https://www.instagram.com" target="_blank"><img src="iglogo.png" style="width:33px; height:33px;" alt="Instagram"></a>
+					<a class="somee" href="mailto:yllappahoc-5573@yopmail.com"><img src="emaillogo.png" style="width:33px; height:33px;" alt="Email"></a>
+				</div>
+			</div>
 		</div>
-		<h1 class="resume animated fadeInUp">His story</h1>
+		
+		<h1 class="resume animated fadeInUp">About</h1>
 	</header>
 	<main>
 		<div class="container">
@@ -120,52 +174,64 @@ function myFunctionm() {
 					<ul class="navigation">
 						<li><a href="index.html">Home</a></li>
 						<li><a href="resume.html">Portfolio</a></li>
-						<li><a href="personality.html">About</a></li>
-						<li><a class="fourth" href="history.html">His story</a></li>
-						<button class="animated fadeInUp" onclick="myFunction()" id="myButton" value="Click To Open Instructions">Click for gymnastics</button>
+						<li><a class="third" href="personality.html">About</a></li>
+						<li><a href="history.html">His story</a></li>
+						<button class="animated fadeInUp" onclick="myFunctionm()" id="myButtonm" value="Click To Open Instructions">Gallery</button>
 					</ul>
 				</div>
-				<div class="col-sm-4 animated fadeInUp">
-					<h2>Early</h2>
-					<p class="early">Age 22, always lived in Espoo, living with family of three, athletic history which includes track and field and later gymnastics, both for several years and medals. 
-					For school I went to the local elementary and from there graduated to Olari’s secondary school. Other mentionable things include travelling a lot with my family
-					across Europe, having visited half of the countries and that I’ve considered my childhood to be a good experience with it’s ups and downs.</p>
-				</div>
-				<div class="col-sm-5 animated fadeInUp">
-					<h2>Later to now</h2>
-					<p class="later">From Olari’s secondary school I managed to get high grades which enabled me to contintue in the same building: Olari’s upper secondary school.
-					At this point point I picked up skiing to replace my other sports. After graduating I spent two years searching my road during which I tried many different paths. 
-					In the winter 2018 I decided to apply to Laurea university of applied sciences, line being Bachelor of Science in Information Technology. 
-					A few weeks later I received information that I’ve been accepted. Currently I am studying there, happy with my choice.
-					<br><button class="mgallery animated fadeInUp" onclick="myFunctionm()" id="myButtonm" value="Click To Open Instructions">Click for gymnastics</button></p>
+				<div class="col-sm-9 animated fadeInUp">
+					<p>Most like writing about positive things first so here goes. What you first need to hear is that my personality is deeply rooted in logical and critical thinking.
+					Seeing the bigger picture, finding the most efficient solution and the way to get there has always been my strong point. Hand to hand with this is my capability to stay within schedule. 
+					Last time I was late going somewhere or with a schoolwork was probably during elementary 
+					school (so long ago don’t even remember what). My personality also consists of wanting to learn new things with an open mind and being unbiased. 
+					As for social skills I’m friendly and an excellent listener, but a stereotypical finnish person when it comes to opening my mouth. 
+					And the more unflattering things include sometimes taking the easy way out, not saying what should be said and all-round lone wolf demeanour which sometimes
+					comes off as cold.</p>
 				</div>
 			</div>
 		</div>
-		<video style="display:none" class="animated fadeIn" id="myDIV" width="37%" height="50%" controls>
-			<source src="my.mp4" type="video/mp4">
-			Your browser does not support HTML5 video.
-		</video>
+		<div class="container animated fadeInUp">
+			<div class="row">
+				<div class="col-sm-3">
+				</div>
+				<div class="col-sm-9">
+					<h3>What I want to improve</h3>
+					<ul class="resumeitem">
+						<li>Not try to do everything myself</li>
+						<li>Teamwork skills</li>
+						<li>More realistic risk analysis (a falling meteor isn’t something that I need to account for)</li>
+						<li>Courage to go forth</li>
+						<button class="mgallery animated fadeInUp" onclick="myFunction()" id="myButton" value="Click To Open Instructions">Gallery</button>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="card animated fadeIn" style="display:none" id="myDIVV" name="slide">
+			<div class="card_part card_part-one">
+			</div>
+			<div class="card_part card_part-two">
+			</div>
+			<div class="card_part card_part-three">
+			</div>
+			<div class="card_part card_part-four">
+			</div>
+			<div class="card_part card_part-five">
+			</div>
+			<div class="card_part card_part-six">
+			</div>
+		</div>		
 	</main>
-    <footer class="footerresume">
-		<div class="footer">
+	    <footer class="footerresume">
+		<div class="footerr">
 			<p>Portfolio Jaakko R</p>
 		</div>
-	</footer>
+		</footer>
 		<nav class="navsome">
 			<a class="some" href="https://www.facebook.com" target="_blank"><img src="facebooklogo.png" style="width:42px; height:42px;" alt="Facebook" ></a>
 			<a class="some" href="https://www.instagram.com" target="_blank"><img src="iglogo.png" style="width:42px; height:42px;" alt="Instagram"></a>
 			<a class="some" href="mailto:yllappahoc-5573@yopmail.com"><img src="emaillogo.png" style="width:42px; height:42px;" alt="Email"></a>
 		</nav>
-		    <div class="footerphone">
-		<div class="footer">
-			<p>Portfolio Jaakko R</p>
-		</div>
-		</div>
-		<div class="navsomee">
-			<a class="somee" href="https://www.facebook.com" target="_blank"><img src="facebooklogo.png" style="width:42px; height:42px;" alt="Facebook" ></a>
-			<a class="somee" href="https://www.instagram.com" target="_blank"><img src="iglogo.png" style="width:42px; height:42px;" alt="Instagram"></a>
-			<a class="somee" href="mailto:yllappahoc-5573@yopmail.com"><img src="emaillogo.png" style="width:42px; height:42px;" alt="Email"></a>
-		</div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
