--- a/resume.html
+++ b/resume.html
@@ -58,7 +58,7 @@ var currentScrollPos = window.pageYOffset;
 	<link rel="shortcut icon" type="image/x-icon" href="mylogo.ico" />
 </head>
   <body>
-  <div id="load_screen"><div id="loading">Loading Portfolio<div class="lds-dual-ring"></div></div></div>
+  <div id="load_screen"><div id="loading" style="font-size:150%;">Assembling myself<br><div class="lds-dual-ring"></div></div></div>
 	<header>
 		<div class="logo">
 			<img src="logojr.png" alt="Logo" title="10 out of 10 logo" style="width:200px;">
@@ -69,6 +69,13 @@ var currentScrollPos = window.pageYOffset;
 			<a class="second phone" href="resume.html">Portfolio</a>
 			<a class="phone" href="personality.html">About</a>
 			<a class="phone" href="history.html">His story</a>
+			<div class="b dropdown phone">Contact
+				<div class="b dropdown-content">
+					<a class="somee" href="https://www.facebook.com" target="_blank"><img src="facebooklogo.png" style="width:33px; height:33px;" alt="Facebook" ></a>
+					<a class="somee" href="https://www.instagram.com" target="_blank"><img src="iglogo.png" style="width:33px; height:33px;" alt="Instagram"></a>
+					<a class="somee" href="mailto:yllappahoc-5573@yopmail.com"><img src="emaillogo.png" style="width:33px; height:33px;" alt="Email"></a>
+				</div>
+			</div>
 		</div>
 	</header>
 	<h1 class="resume animated fadeInUp">Portfolio</h1>
@@ -87,7 +94,7 @@ var currentScrollPos = window.pageYOffset;
 					
 					<p>First things first: at first glance it might seem like there are some useful bullet points listed. But in reality, yeah,
 					there really isn’t a whole lot. Atm I’m just a fledling attempting to take my first steps outside mandatory school while trying not to tumble and fall. 
-					All success stories start somewhere right? (That was a bit cringy sry.)
+					And if I end up on my face (which has already happened a couple times), I will keep rising back on my feet again to find my place in this world.
 					Anyway. My aim is to learn all I can at Laurea university of applied sciences to become the person whom I want to be. 
 					Intelligent, open, social, curious, ever learning and ofc: become specialized in an ICT field and know all about it.</p>
 				</div>
@@ -105,7 +112,7 @@ var currentScrollPos = window.pageYOffset;
 						<li>Certified in first aid</li>
 						<li>Hygiene passport</li>
 						<li>Language skills include rudiments in french and swedish</li>
-						<li class="txthid"><span class="hiddentxt">Bonus</span><span class="hiddenimg"><img src="wow1.png" width="300" /></span></li>
+						<li class="txthid"><span class="hiddentxt">Bonus</span><span class="hiddenimg"><img src="wow1.png" alt="Ranking pelissä" width="300" /></span></li>
 					</ul>
 				</div>
 					<div class="col-sm-5">
