--- a/history.html
+++ b/history.html
@@ -38,9 +38,9 @@ div#load_screen > div#loading{
 }
 	</style>
 	
-	<script type="text/javascript">
+	<script>
 window.addEventListener("load", function(){
-	var load_screen = document.getElementById("load_screen");
+	var load_screen = document.getElementById("load_screen"); 
 	document.body.removeChild(load_screen);
 });
 
@@ -99,7 +99,7 @@ function myFunctionm() {
 	<link rel="shortcut icon" type="image/x-icon" href="mylogo.ico" />
 </head>
   <body>
-    <div id="load_screen"><div id="loading">Loading Portfolio<div class="lds-dual-ring"></div></div></div>
+    <div id="load_screen"><div id="loading" style="font-size:150%;">Assembling myself<br><div class="lds-dual-ring"></div></div></div>
 	<header>
 		<div class="logo">
 			<img src="logojr.png" alt="Logo" title="10 out of 10 logo" style="width:200px;">
@@ -110,6 +110,13 @@ function myFunctionm() {
 			<a class="phone" href="resume.html">Portfolio</a>
 			<a class="phone" href="personality.html">About</a>
 			<a class="fourth phone" href="history.html">His story</a>
+			<div class="b dropdown phone">Contact
+				<div class="b dropdown-content">
+					<a class="somee" href="https://www.facebook.com" target="_blank"><img src="facebooklogo.png" style="width:33px; height:33px;" alt="Facebook" ></a>
+					<a class="somee" href="https://www.instagram.com" target="_blank"><img src="iglogo.png" style="width:33px; height:33px;" alt="Instagram"></a>
+					<a class="somee" href="mailto:yllappahoc-5573@yopmail.com"><img src="emaillogo.png" style="width:33px; height:33px;" alt="Email"></a>
+				</div>
+			</div>
 		</div>
 		<h1 class="resume animated fadeInUp">His story</h1>
 	</header>
@@ -122,8 +129,8 @@ function myFunctionm() {
 						<li><a href="resume.html">Portfolio</a></li>
 						<li><a href="personality.html">About</a></li>
 						<li><a class="fourth" href="history.html">His story</a></li>
-						<button class="animated fadeInUp" onclick="myFunction()" id="myButton" value="Click To Open Instructions">Click for gymnastics</button>
 					</ul>
+				<button class="mb animated fadeInUp" onclick="myFunction()" id="myButton" value="Click To Open Instructions">Click for gymnastics</button>
 				</div>
 				<div class="col-sm-4 animated fadeInUp">
 					<h2>Early</h2>
@@ -141,7 +148,7 @@ function myFunctionm() {
 				</div>
 			</div>
 		</div>
-		<video style="display:none" class="animated fadeIn" id="myDIV" width="37%" height="50%" controls>
+		<video style="display:none" class="animated fadeIn" id="myDIV" controls>
 			<source src="my.mp4" type="video/mp4">
 			Your browser does not support HTML5 video.
 		</video>
